Brief and descriptive message about your changes

--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
             <button onclick="addToCart('Iced Spanish Latte', 13)">Add to Cart</button>
         </div>
          <div class="menu-item">
-            <img src="8.jpg" alt="iced matcha green tea"><br>
-            <strong>iced matcha green tea</strong><br> RM12<br>
-            <button onclick="addToCart('iced matcha green tea', 12)">Add to Cart</button>
+            <img src="8.jpg" alt="Iced matcha green tea"><br>
+            <strong>Iced matcha green tea</strong><br> RM12<br>
+            <button onclick="addToCart('Iced matcha green tea', 12)">Add to Cart</button>
         </div>
     </div>
     <div class="menu-container">
