--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="kopi 2025.png">
     <style>
         body {
-            background-image: url('background.png');
+            background-image: url('background.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
@@ -57,7 +57,7 @@
             }
         }
 
-        /* Further narrow for very small screens */
+        
         @media screen and (max-width: 480px) {
             .menu-item {
                 width: calc(100% - 20px);
@@ -115,7 +115,7 @@
             background-color: #593a28;
         }
 
-        /* New CSS for disabled state with not-allowed cursor */
+        
         button:disabled,
         input:disabled {
             cursor: not-allowed;
