--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
             <button onclick="addToCart('Iced Spanish Latte', 13)">Add to Cart</button>
         </div>
            <div class="menu-item">
-            <img src="8.jpg" alt="Iced matcha green tea"><br>
-            <strong>Iced matcha green tea</strong><br> RM12<br>
-            <button onclick="addToCart('Iced matcha green tea', 12)">Add to Cart</button>
+            <img src="8.jpg" alt="Iced Matcha Green Tea"><br>
+            <strong>Iced Matcha Green Tea</strong><br> RM12<br>
+            <button onclick="addToCart('Iced Matcha Green Tea', 12)">Add to Cart</button>
         </div>
     </div>
     <div class="menu-container">
