--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         @media screen and (max-width: 768px) {
             body {
-                background-image: url('background.png');
+                background-image: url('background.jpg');
                 background-position: top center;
                 background-attachment: scroll;
             }
