--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Dose Coffee</title>
-    <link rel="icon" type="image/png" href="kopi 2025.png">
+    <link rel="icon" type="image/png" href="Logo.png">
     <style>
         body {
             background-image: url('background.jpg');
