--- a/index.html
+++ b/index.html
@@ -458,6 +458,8 @@
         <button class="category-tab" id="tab-hot" onclick="showCategory('hot')">Hot</button>
         <button class="category-tab" id="tab-cold" onclick="showCategory('cold')">Cold</button>
         <button class="category-tab" id="tab-frappe" onclick="showCategory('frappe')">Frappe</button>
+    </div>
+    <div class="category-tabs">
         <button class="category-tab" id="tab-beans" onclick="showCategory('beans')">Beans</button>
         <button class="category-tab" id="tab-merchandise" onclick="showCategory('merchandise')">Merchandise</button>
     </div>
