--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         }
 
         .category-tab:hover {
-            background-color: #fd5d33; /* Orange on hover */
+            background-color: #593a28; /* Orange on hover */
             transform: translateY(-2px);
         }
 
         .category-tab.active {
-            background-color: #fd5d33; /* Orange for active tab */
+            background-color: #593a28; /* Orange for active tab */
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             transform: translateY(-2-px);
         }
@@ -153,7 +153,7 @@
         }
 
         button {
-            background-color: #fd5d33;
+            background-color: #593a28;
             color: white;
             border: none;
             padding: 10px 15px;
@@ -163,7 +163,7 @@
         }
 
         button:hover {
-            background-color: #593a28;
+            background-color: #857b7b;
         }
 
         button:disabled,
@@ -207,7 +207,7 @@
         }
 
         .quantity-btn.minus {
-            background-color: #f44336; 
+            background-color: #e02222; 
         }
 
         .quantity-btn:hover {
@@ -252,7 +252,7 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            background-color: #fd5d33;
+            background-color: #593a28;
             color: white;
             padding: 10px 15px;
             border-radius: 8px;
