--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="Logo.png">
     <style>
         body {
-            background-image: url('background.jpg');
+            background-image: url('background1.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
