--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
 
         .category-tab {
-            background-color: #593a28; /* Darker brown for tabs */
+            background-color: #b68f79; /* Darker brown for tabs */
             color: white;
             padding: 12px 20px;
             border: none;
