--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         @media screen and (max-width: 768px) {
             body {
-                background-image: url('background.jpg');
+                background-image: url('background1.jpg');
                 background-position: top center;
                 background-attachment: scroll;
             }
