--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             width: 100px;
             height: 100px;
             object-fit: cover;
-            border-radius: 50%;
+            border-radius: 0px;
             margin-bottom: 10px;
         }
 
@@ -563,12 +563,12 @@
 
     <div id="merchandise" class="category-section menu-container" style="display:none;">
         <div class="menu-item">
-            <img src="mug.jpg" alt="Coffee Mug"><br>
+            <img src="mug1.png" alt="Coffee Mug"><br>
             <strong>Daily Dose Mug</strong><br> RM25<br>
             <button onclick="addToCart('Daily Dose Mug', 25)">Add to Cart</button>
         </div>
         <div class="menu-item">
-            <img src="tshirt.jpg" alt="T-Shirt"><br>
+            <img src="tshirt1.png" alt="T-Shirt"><br>
             <strong>Daily Dose T-Shirt</strong><br> RM45<br>
             <button onclick="addToCart('Daily Dose T-Shirt', 45)">Add to Cart</button>
         </div>
