--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     </script>
 </head>
 <body>
-    <a href="https://www.canva.com/design/DAGsOmLbQXE/zX-nuOxq8ONs74sdi62MWA/view?mode=prototype" class="back-button">&#8592; Back</a> 
+    <a href="https://cloud.justinmind.com/usernote/prototype/a0b653e9495cdb345ea20405469dbd630fa9a4665dbdb37f4bcde3b04fa24302" class="back-button">&#8592; Back</a> 
     <br>
     <h1>Daily Dose Coffee</h1>
 
