--- a/index.html
+++ b/index.html
@@ -545,19 +545,19 @@
 
     <div id="beans" class="category-section menu-container" style="display:none;">
         <div class="menu-item">
-            <img src="beans1.png" alt="Arabica Beans" class="bean-image"><br>
-            <strong>Arabica Beans (250g)</strong><br> RM38<br>
-            <button onclick="addToCart('Arabica Beans (250g)', 38)">Add to Cart</button>
+            <img src="beans1.png" alt="Colombian Beans" class="bean-image"><br>
+            <strong>Colombian (250g)</strong><br> RM38<br>
+            <button onclick="addToCart('Colombian Beans (250g)', 38)">Add to Cart</button>
         </div>
         <div class="menu-item">
-            <img src="beans2.png" alt="Robusta Beans" class="bean-image"><br>
-            <strong>Robusta Beans (250g) - Single Origin</strong><br> RM45<br>
-            <button onclick="addToCart('Robusta Beans (250g) - Single Origin', 45)">Add to Cart</button>
+            <img src="beans2.png" alt="Ethiopian Beans" class="bean-image"><br>
+            <strong>Ethiopian Beans (250g)</strong><br> RM45<br>
+            <button onclick="addToCart('Ethiopian Beans (250g)', 45)">Add to Cart</button>
         </div>
         <div class="menu-item">
-            <img src="beans3.png" alt="Daily Beans Bold Roast" class="bean-image"><br>
-            <strong>Daily Beans (250g) - Bold Roast</strong><br> RM40<br>
-            <button onclick="addToCart('Daily Beans (250g) - Bold Roast', 40)">Add to Cart</button>
+            <img src="beans3.png" alt="Daily Dose Beans" class="bean-image"><br>
+            <strong>Daily Dose Beans (250g)</strong><br> RM40<br>
+            <button onclick="addToCart('Daily Beans (250g)', 40)">Add to Cart</button>
         </div>
     </div>
 
