--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     <div id="beans" class="category-section menu-container" style="display:none;">
         <div class="menu-item">
             <img src="beans1.png" alt="Colombian Beans" class="bean-image"><br>
-            <strong>Colombian (250g)</strong><br> RM38<br>
+            <strong>Colombian Beans (250g)</strong><br> RM38<br>
             <button onclick="addToCart('Colombian Beans (250g)', 38)">Add to Cart</button>
         </div>
         <div class="menu-item">
